# component-youtube-analytics

./: .gitignore  Dockerfile  README.md  bitbucket-pipelines.yml  pyproject.toml  requirements.txt
.github/workflows/: push.yml
component_config/: component_long_description.md  component_short_description.md  configSchema.json  configuration_description.md  documentationUrl.md  licenseUrl.md  sourceCodeUrl.md
component_config/sample-config/: config.json
src/: component.py  configuration.py  report_types.py
src/component_youtube_analytics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/google_yt/: client.py
