[project]
name = "component-youtube-analytics"
dynamic = ["version"]
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "backoff>=2.0.0",
    "dataconf>=2.2.1",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "keboola-component>=1.9.0",
    "keboola-utils>=1.1.0",
    "pyhocon>=0.3.60",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I", "UP"]
